// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> Snapshots renders brand color correctly 1`] = `
<button
  class="🅲Button-base 🅲Button-filled 🅲Button-successColor"
  type="button"
>
  Componentry
</button>
`;

exports[`<Button /> Snapshots renders defaults correctly 1`] = `
<button
  class="🅲Button-base 🅲Button-filled"
  type="button"
>
  Componentry
</button>
`;

exports[`<Button /> Snapshots renders large outline correctly 1`] = `
<button
  class="🅲Button-base 🅲Button-filled 🅲Button-lgSize"
  type="button"
>
  Componentry
</button>
`;
